--- a/index.html
+++ b/index.html
@@ -168,39 +168,32 @@ alt="Picture shows computer">
 </article>
 </div>
 </main>
+
 <!-- IMPRESSUM -->
 <footer><span class="flex profil-links">
+
 <!-- github.com/xuser123 -->
 <a id="githubIcon" href="https://www.github.com/xuser123" target="_blank">
-<img src="assets/img/ico/github.ico" alt="Github/xuser123">
-</a>&#32;
-<!-- instagram.com/jumicontent -->
-<a id="instagramIcon" href="https://www.instagram.com/jumicontent" target="_blank">
-<img src="assets/img/ico/instagram.ico" alt="Instagram/jumicontent">
-</a></span>
+<img src="assets/img/ico/github.ico" alt="Github/xuser123"></a>&#32;
 
 <!-- contact@jumi.biz -->
-<span class="jumi-email">
-contact&#64;jumi.biz
-</span>
-
-<span class="flex siteFeatures">
-<!-- Export -Feature (inaktiv)-->
-<a id="exportIcon">
-<img src="assets/img/ico/exportPDF.ico" alt="Export as PDF">
-<!-- PDF-Export-Script (jsPDF):
-https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js
-<script src="assets/js/jspdf.umd.min.js"> -->
-</a>&#32;
+<span class="jumi-email">contact&#64;jumi.biz</span>
 
 <!-- Zum Seitenanfang -Feature (aktiv)-->
 <a id="scrollToTop" href="#">
 <img src="assets/img/ico/backTop.ico" alt="Zum Seitenanfang">
+
 </a></span></footer>
 
-    <!-- PDF-Export-Script (jsPDF):
-https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js
-<script src="assets/js/jspdf.umd.min.js"> -->
+<!-- instagram.com/jumicontent -->
+<!--<a id="instagramIcon" href="https://www.instagram.com/jumicontent" target="_blank">
+<img src="assets/img/ico/instagram.ico" alt="Instagram/jumicontent"></a></span>-->
+
+<!-- Export -Feature (inaktiv)-->
+<!-- https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js-->
+<!--<span class="flex siteFeatures">
+<a id="exportIcon"><img src="assets/img/ico/exportPDF.ico" alt="Export as PDF"></a>&#32;
+<script src="assets/js/jspdf.umd.min.js">-->
 
 <!-- HTML-Analyzer Debugging ->
 <h1>HTML-Analyzer</h1>
@@ -214,6 +207,12 @@ https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js
 </div>
 <script src="assets/js/html-analyzer.js"></script>
 <!- HTML-Analyzer Debugging -->
+
+<!-- JavaScricpt -->
+    <script src="assets/js/menu.js"></script>
+	<script src="assets/js/modal.js"></script>
+    <!-- for Easteregg Project:
+    <script src="assets/js/read.js"></script> -->
 
 </body>
 </html>
