--- a/pages/IT-Sicherheit.htm
+++ b/pages/IT-Sicherheit.htm
@@ -65,6 +65,7 @@ snippets,vorlagen,lernen,verstehen,
 <tr>
 <td style="border: none;">
 <h1><a name="Informationssicherheit"></a><b>Informationssicherheit</b> </h1>
+
 <h2><a name="Schutzziele-der-Informationssicherheit"></a><b>Schutzziele der Informationssicherheit</b> </h2>
 <ol><li><b>Vertraulichkeit</b> Nur autorisierte Zugriffe</li>
 <li><b>Integrität</b> Schutz vor Manipulation</li>
@@ -72,6 +73,7 @@ snippets,vorlagen,lernen,verstehen,
 <li><b>Authentizität</b> Verifizierte Quellen</li>
 <li><b>Zurechenbarkeit</b> Nachverfolgbarkeit von Aktivitäten</li>
 <li><b>Unbestreitbarkeit</b> Sicherstellung durchgeführter Handlungen </li></ol>
+
 <h2><a name="Datensicherheit"></a><b>Datensicherheit</b> </h2>
 <p>Daten technisch und organisatorisch vor</p>
 <ul><li>unbefugtem Zugriff
@@ -113,7 +115,9 @@ snippets,vorlagen,lernen,verstehen,
 <ul><li>z.B. Trunk Ports</li>
 <li>etikettierte Ethernet-Frames
 <ul><li>Kennzeichnung der VLAN-Zugehörigkeit </li></ul></li></ul></li></ul></li></ul>
+
 <h2><a name="Datenschutz"></a><b>Datenschutz</b> </h2>
+
 <h3><a name="Gesetze-und-Regelungen"></a><b>Gesetze und Regelungen</b> </h3>
 <ul><li>Vorschriften aus <b>Kapitel 3 der DSGVO</b></li>
 <li><b>personenbezogene Daten</b> schützen</li>
@@ -125,17 +129,21 @@ snippets,vorlagen,lernen,verstehen,
 <ul><li>Nur zweckgebundene Daten sammeln
 <ul><li>für unbedingt notwendige Verarbeitungszwecke</li></ul></li>
 <li>Schutz vor übermäßiger Speicherung </li></ul></li></ul>
+
 <h3><a name="Rechtliche-und-ethische-Verantwortung-von-Organisationen-und-Einzelpersonen--c3--bc-ber-das-angemessene"></a><b>Rechtliche und ethische Verantwortung von Organisationen und Einzelpersonen über das angemessene</b> </h3>
 <ul><li>sammeln,</li>
 <li>verarbeiten,</li>
 <li>speichern,</li>
 <li>schützen personenbezogene Daten. </li></ul>
+
 <h2><a name="Ma-c3--9f-nahmen"></a><b>Maßnahmen</b> </h2>
 <ul><li>organisatorisch</li>
 <li>technisch</li>
 <li>personell </li></ul>
+
 <h2><a name="IT-2d-Sicherheitsmanagement"></a><b>IT-Sicherheitsmanagement</b> </h2>
 <ul><li><b>ISMS</b> Informationssicherheits-Managementsystem </li></ul>
+
 <h2><a name="Standards"></a><b>Standards</b> </h2>
 <ul><li>ISO/IEC 27000
 <ul><li>Überblick über Zusammenhänge in ISO/IEC 2700x-Familie</li>
@@ -152,6 +160,7 @@ snippets,vorlagen,lernen,verstehen,
 <li>BSI-Standard 200-2
 <ul><li>Basis der BSI-Methodik</li>
 <li>Aufbau des ISMS </li></ul></li></ul>
+
 <h2><a name="ISO-2f-IEC-27001--2d-Zertifizierung"></a><b>ISO/IEC 27001 -Zertifizierung</b> </h2>
 <ul><li>international anerkannter Standard</li>
 <li>Vertrauensgewinn
@@ -166,13 +175,16 @@ snippets,vorlagen,lernen,verstehen,
 <li>Qualität von IT-Systemen nachhaltig optimieren</li>
 <li>Sicherheitslücken systematisch aufdecken</li>
 <li>Abschätzung möglicher Schäden und Folgekosten </li></ul></li></ul>
+
 <h2><a name="Vorschriften"></a><b>Vorschriften</b> </h2>
 <ul><li>Basel I und II</li>
 <li>SOX </li></ul>
+
 <h1><a name="IT-2d-Grundschutz"></a><b>IT-Grundschutz</b> </h1>
 <ul><li>Elementare Gefährdungen</li>
 <li>Prozess Bausteine</li>
 <li>System Bausteine </li></ul>
+
 <h2><a name="Elementare-Gef-c3--a4-hrdungen"></a><b>Elementare Gefährdungen</b> </h2>
 <ul><li>Feuer</li>
 <li>Ungünstige klimatische Bedingungen</li>
@@ -227,14 +239,17 @@ snippets,vorlagen,lernen,verstehen,
 <li>Datenverlust</li>
 <li>Integritätsverlust schützenswerter Informationen</li>
 <li>Schädliche Seiteneffekte IT-gestützter Angriffe </li></ul>
+
 <h2><a name="Prozess-2d-Bausteine"></a><b>Prozess-Bausteine</b> </h2>
 <p>Sicherheitsmanagement (ISMS) </p>
+
 <h3><a name="Organisation-und-Personal--28-ORP-29-"></a><b>Organisation und Personal (ORP)</b> </h3>
 <ol><li>Organisation</li>
 <li>Personal</li>
 <li>Sensibilisierung und Schulung zur Informationssicherheit</li>
 <li>Identitäts- und Berechtigungsmanagement</li>
 <li>Compliance Management (Anforderungsmanagement) </li></ol>
+
 <h3><a name="Konzepte-und-Vorgehensweisen"></a><b>Konzepte und Vorgehensweisen</b> </h3>
 <ul><li>Kryptokonzept ,</li>
 <li>Datenschutz ,</li>
@@ -245,6 +260,7 @@ snippets,vorlagen,lernen,verstehen,
 <li>Informationsaustausch ,</li>
 <li>Entwicklung von Webanwendungen ,</li>
 <li>Geheimschutz VS-NUR FÜR DEN DIENSTGEBRAUCH (VS-NfD) . </li></ul>
+
 <h3><a name="Betrieb"></a><b>Betrieb</b> </h3>
 <h4><a name="Eigener-Betrieb"></a><b>Eigener Betrieb</b> </h4>
 <h5><a name="Kern-2d-IT-2d-Betrieb"></a><b>Kern-IT-Betrieb</b> </h5>
@@ -265,6 +281,7 @@ snippets,vorlagen,lernen,verstehen,
 <li>Nutzung von Outsourcing </li></ul>
 <h4><a name="Betrieb-f-c3--bc-r-Dritte"></a><b>Betrieb für Dritte</b> </h4>
 <ul><li>Anbieten von Outsourcing </li></ul>
+
 <h3><a name="Detektion-und-Reaktion"></a><b>Detektion und Reaktion</b> </h3>
 <ul><li>Detektion von sicherheitsrelevanten Ereignissen </li></ul>
 <h5><a name="Security-Incident-Management"></a><b>Security Incident Management</b> </h5>
@@ -345,6 +362,7 @@ snippets,vorlagen,lernen,verstehen,
 <li>IND.2.7 Safety Instrumented Systems </li></ul>
 <h5><a name="IND.3-Produktionsnetze"></a><b>IND.3 Produktionsnetze</b> </h5>
 <ul><li>IND.3.2 Fernwartung im industriellen Umfeld </li></ul>
+
 <h3><a name="Netze-und-Kommunikation"></a><b>Netze und Kommunikation</b> </h3>
 <h4><a name="NET.1-Netze"></a><b>NET.1 Netze</b> </h4>
 <ul><li>NET.1.1 Netzarchitektur und -design</li>
@@ -392,6 +410,7 @@ snippets,vorlagen,lernen,verstehen,
 <li>INF.12 Verkabelung</li>
 <li>INF.13 Technisches Gebäudemanagement</li>
 <li>INF.14 Gebäudeautomation </li></ul>
+
 <h3><a name="Schutzbedarfsanalyse"></a><b>Schutzbedarfsanalyse</b> </h3>
 <ul><li>Beauftragte</li>
 <li>Sicherheitsbewusstseins</li>
@@ -465,6 +484,7 @@ snippets,vorlagen,lernen,verstehen,
 <li>thermische</li></ul></li></ul></li>
 <li>umwelt- und fachgerechte Entsorgung
 <ul><li>durch zertifiziertes Entsorgungsunternehmen </li></ul></li></ul></li></ul></li></ul>
+
 <h3><a name="Schadprogramme"></a><b>Schadprogramme</b> </h3>
 <ul><li>Virus</li>
 <li>Worm</li>
@@ -479,6 +499,7 @@ snippets,vorlagen,lernen,verstehen,
 <li>Hoax</li>
 <li>Dialer</li>
 <li>Keylogger </li></ul>
+
 <h3><a name="Hacker"></a><b>Hacker</b> </h3>
 <ul><li>White Hat</li>
 <li>Black Hat</li>
@@ -488,6 +509,7 @@ snippets,vorlagen,lernen,verstehen,
 <li>Packet Hat</li>
 <li>Cracker</li>
 <li>Script-Kiddies </li></ul>
+
 <h3><a name="Methoden"></a><b>Methoden</b> </h3>
 <ul><li>Spam</li>
 <li>Phishing</li>
@@ -506,6 +528,7 @@ snippets,vorlagen,lernen,verstehen,
 <li>Exploit</li>
 <li>0-Day-Exploit</li>
 <li>Rootkit </li></ul>
+
 <h3><a name="Kryptografie"></a><b>Kryptografie</b> </h3>
 <ul><li>Verschlüsselungstechniken
 <ul><li>symmetrisch</li>
@@ -590,6 +613,7 @@ snippets,vorlagen,lernen,verstehen,
 <li>Kontosperre bei Login-Fehlversuchen</li>
 <li>Optional: Einpräsame Passwortsätze</li>
 <li>Optional: Multi-Factor-Authentication (MFA) </li></ul></li></ul>
+
 <h2><a name="Phasen-eines-Sicherheitsprozess"></a><b>Phasen eines Sicherheitsprozess</b> </h2>
 <ul><li>nach BSI-Standard 100-2</li>
 <li>Initiierung
@@ -645,39 +669,32 @@ snippets,vorlagen,lernen,verstehen,
 </article>
 </div>
 </main>
+
 <!-- IMPRESSUM -->
 <footer><span class="flex profil-links">
+
 <!-- github.com/xuser123 -->
 <a id="githubIcon" href="https://www.github.com/xuser123" target="_blank">
-<img src="../assets/img/ico/github.ico" alt="Github/xuser123">
-</a>&#32;
-<!-- instagram.com/jumicontent -->
-<a id="instagramIcon" href="https://www.instagram.com/jumicontent" target="_blank">
-<img src="../assets/img/ico/instagram.ico" alt="Instagram/jumicontent">
-</a></span>
+<img src="../assets/img/ico/github.ico" alt="Github/xuser123"></a>&#32;
 
 <!-- contact@jumi.biz -->
-<span class="jumi-email">
-contact&#64;jumi.biz
-</span>
-
-<span class="flex siteFeatures">
-<!-- Export -Feature (inaktiv)-->
-<a id="exportIcon">
-<img src="../assets/img/ico/exportPDF.ico" alt="Export as PDF">
-<!-- PDF-Export-Script (jsPDF):
-https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js
-<script src="assets/js/jspdf.umd.min.js"> -->
-</a>&#32;
+<span class="jumi-email">contact&#64;jumi.biz</span>
 
 <!-- Zum Seitenanfang -Feature (aktiv)-->
 <a id="scrollToTop" href="#">
 <img src="../assets/img/ico/backTop.ico" alt="Zum Seitenanfang">
+
 </a></span></footer>
 
-    <!-- PDF-Export-Script (jsPDF):
-https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js
-<script src="assets/js/jspdf.umd.min.js"> -->
+<!-- instagram.com/jumicontent -->
+<!--<a id="instagramIcon" href="https://www.instagram.com/jumicontent" target="_blank">
+<img src="../assets/img/ico/instagram.ico" alt="Instagram/jumicontent"></a></span>-->
+
+<!-- Export -Feature (inaktiv)-->
+<!-- https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js-->
+<!--<span class="flex siteFeatures">
+<a id="exportIcon"><img src="../assets/img/ico/exportPDF.ico" alt="Export as PDF"></a>&#32;
+<script src="assets/js/jspdf.umd.min.js">-->
 
 <!-- HTML-Analyzer Debugging ->
 <h1>HTML-Analyzer</h1>
@@ -691,6 +708,12 @@ https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js
 </div>
 <script src="assets/js/html-analyzer.js"></script>
 <!- HTML-Analyzer Debugging -->
+
+<!-- JavaScricpt -->
+    <script src="../assets/js/menu.js"></script>
+	<script src="../assets/js/modal.js"></script>
+    <!-- for Easteregg Project:
+    <script src="assets/js/read.js"></script> -->
 
 </body>
 </html>
