--- a/pages/Projektmanagement.htm
+++ b/pages/Projektmanagement.htm
@@ -82,9 +82,7 @@ snippets,vorlagen,lernen,verstehen,
 </li><li> Kosten
 </li><li> Zeit
 
-</li></ul>
-
-<h2> Rahmenbedingungen
+</li></ul><h2> Rahmenbedingungen
 </h2><ul><li> <b>Datensicherheit
 </b></li><li> <b>Datenschutz
 </b></li><li> wirtschaftlich
@@ -99,9 +97,7 @@ snippets,vorlagen,lernen,verstehen,
 </li><li> realistisch
 </li><li> terminiert
 
-</ul>
-
-<h3> Machbarkeitsanalyse
+</ul><h3> Machbarkeitsanalyse
 </h3><ul><li> <b>Risikoanalyse
 </b></li><li> <b>Stakeholderanalyse
 
@@ -121,9 +117,7 @@ snippets,vorlagen,lernen,verstehen,
 </li><li> 4. behandeln, reduzieren,
 </li><li> 5. monitarisieren und verhindern.
 
-</li></ul></ul>
-
-<h2> Kickoff-Off-Meeting
+</li></ul></ul><h2> Kickoff-Off-Meeting
 </h2><ul><li> Nach Planung
 </li><li> Vor Durchführung
 </li><li> Projektteam-Mitglieder
@@ -152,9 +146,7 @@ snippets,vorlagen,lernen,verstehen,
 </li><li> messbarer Fortschritt
 </li><li> überwachung und berichten
 
-</li></ul></ul>
-
-<h2> Projektstrukturplan
+</li></ul></ul><h2> Projektstrukturplan
 </h2><ul><li> Gliederung
 </li><li> Kontrollelemente
 </li><li> statische Sicht
@@ -189,9 +181,7 @@ snippets,vorlagen,lernen,verstehen,
 </li><li> Risikoanalyse
 </li><li> Lizenzen
 
-</li></ul></ul></ul>
-
-<h3> Projektleiter-Aufgaben
+</li></ul></ul></ul><h3> Projektleiter-Aufgaben
 </h3><ul><li> Auf Zieldefinition mitwirken
 </li><li> Teams koordinieren
 </li><li> Aufgaben verteilen
@@ -227,9 +217,7 @@ snippets,vorlagen,lernen,verstehen,
 </li><li> Spiral,
 </li><li> V-Modell
 
-</li></ul></ul>
-
-<h4> agile Modelle
+</li></ul></ul><h4> agile Modelle
 </h4><ul><li> <b>Scrum</b>,
 </li><li> <b>Kanban</b>,
 </li><li> Inkrementelle Vorgehensweise,
@@ -272,9 +260,7 @@ snippets,vorlagen,lernen,verstehen,
 </li><li> Buttom-up
 </li><li> Yo-Yo-Ansatz
 
-</li></ul></ul></ul>
-
-<h3> Netzplan
+</li></ul></ul></ul><h3> Netzplan
 </h3><ul><li> zeitliche und logische Abhängigkeiten
 </li><li> Zeitpuffer
 </li><li> kritischer Pfad
@@ -291,9 +277,9 @@ snippets,vorlagen,lernen,verstehen,
 </li></ul><li> 6. Spätester Anfang (SA)
 </li><li> 7. Frühestes Ende (FE)
 </li><li> 8. Spätestes Ende (SE)
-</li></ul></ul> <p>Wenn Phase-Zeitpuffer = 0 ist, dann ist Phase ein &quot;Kritischer Pfad&quot; und bestimmt Projektdauer.</p>
+</li></ul></ul> <p>Wenn Phase-Zeitpuffer = 0 ist, dann ist Phase ein &quot;Kritischer Pfad&quot; und bestimmt Projektdauer.
 
-<h3> Gantt-Diagramm
+</p><h3> Gantt-Diagramm
 </h3><ul></li><li> Zeitliche Aktivitäten-Reihenfolge
 </li><li> Zeitachse (zB. Kalenderwochen)
 </li><li> Parallelitäten
@@ -301,9 +287,7 @@ snippets,vorlagen,lernen,verstehen,
 </li><li> Pufferzeiten markieren
 </li><li> Für &quot;kurze&quot; Projektdauer geeignet.
 
-</li></ul></ul>
-
-<h3> Kanban Board
+</li></ul></ul><h3> Kanban Board
 </h3><ul></li><li> WIP-Limit (work in progress)
 </li><li> Pull statt Push
 </li><li> Spalten entsprechen Prozessschritten
@@ -326,9 +310,7 @@ snippets,vorlagen,lernen,verstehen,
 </li><li> souveräner Vortrag
 </li><li> zeitliche Vorgaben
 
-</li></ul></ul>
-
-<h3> SCRUM
+</li></ul></ul><h3> SCRUM
 </h3><ul><li> agiles Framework
 </li><li> Effizienz
 </li><li> Flexibilität
@@ -356,9 +338,7 @@ snippets,vorlagen,lernen,verstehen,
 </li></ul><li> &quot;Daily Standup&quot;
 </li><ul><li> Tägliche Besprechung
 
-</li></ul></ul></ul></ul>
-
-<h3> Teambildung (Bruce Tuckman)
+</li></ul></ul></ul></ul><h3> Teambildung (Bruce Tuckman)
 </h3><ul><li> 1. Forming, Orientierungsphase, Teams definieren
 </li><li> 2. Storming, Nahkampfphase, Rollen verteilen
 </li><li> 3. Norming, Organisationsphase, Struktur und Regeln
@@ -379,40 +359,67 @@ snippets,vorlagen,lernen,verstehen,
 </li><li>6. Win-Win-Lösung
 </li><ul><li> Fokus auf Interessen
 </li></ul><li> Retrospektive
-</li></ul></ul>
 
-<li><b> Integration</a></b><span class="kleintxt"> <span class="kleintxt">Koordination / Zuweisung</span></span></li>
-<li><b> Umfang</a></b><span class="kleintxt"> Vorgaben / Überwachung</span></li>
-<li><b> Zeitplanung</a></b><span class="kleintxt"> Termine / Netzplan</span></li>
-<li><b> Kosten</a></b><span class="kleintxt"> Budgets / Kontrollmaßnahmen</span></li>
-<li><b> Qualität</a></b><span class="kleintxt"> Standards / Dokumentation</span></li>
-<li><b> Ressourcen</a></b><span class="kleintxt"> Arbeitsmittel / Personal</span></li>
-<li><b> Kommunikation</a></b><span class="kleintxt"> Hierarchie / Grundsätze</span></li>
-<li><b> Risikoanalyse</a></b><span class="kleintxt"> Notfallpläne / Flexibiltät</span></li>
-<li><b> Beschaffung</a></b><span class="kleintxt"> Kapazitäten / Bestellungen</span></li>
+</li></ul></ul><li><b> Integration
+</a></b><span class="kleintxt"> <span class="kleintxt">Koordination / Zuweisung
+</span></span></li><li><b> Umfang</a></b><span class="kleintxt"> Vorgaben / Überwachung
+</span></li><li><b> Zeitplanung</a></b><span class="kleintxt"> Termine / Netzplan
+</span></li><li><b> Kosten</a></b><span class="kleintxt"> Budgets / Kontrollmaßnahmen
+</span></li><li><b> Qualität</a></b><span class="kleintxt"> Standards / Dokumentation
+</span></li><li><b> Ressourcen</a></b><span class="kleintxt"> Arbeitsmittel / Personal
+</span></li><li><b> Kommunikation</a></b><span class="kleintxt"> Hierarchie / Grundsätze
+</span></li><li><b> Risikoanalyse</a></b><span class="kleintxt"> Notfallpläne / Flexibiltät
+</span></li><li><b> Beschaffung</a></b><span class="kleintxt"> Kapazitäten / Bestellungen
 
+</span></li>
 </article>
 </div>
 </main>
 
-<footer>
 <!-- IMPRESSUM -->
-<span class="flex profil-links"><a id="githubIcon" href="https://github.com/xuser123" target="_blank"><img src="../assets/img/ico/github.ico" alt="Github/xuser123"></a>&#32;<a  id="instagramIcon" href="https://instagram.com/jumicontent" target="_blank"><img src="../assets/img/ico/instagram.ico" alt="Instagram/jumicontent"></a></span>
+<footer><span class="flex profil-links">
+
+<!-- github.com/xuser123 -->
+<a id="githubIcon" href="https://www.github.com/xuser123" target="_blank">
+<img src="../assets/img/ico/github.ico" alt="Github/xuser123"></a>&#32;
+
 <!-- contact@jumi.biz -->
 <span class="jumi-email">contact&#64;jumi.biz</span>
-<!-- Site Features -->
-<span class="flex siteFeatures"><a id="exportIcon"><img src="../assets/img/ico/exportPDF.ico" alt="Export as PDF"></a>&#32;<a id="scrollToTop" href="#"><img src="../assets/img/ico/backTop.ico" alt="Back to Top"></a></span>
-</footer>
 
-<!-- Skripte -->
+<!-- Zum Seitenanfang -Feature (aktiv)-->
+<a id="scrollToTop" href="#">
+<img src="../assets/img/ico/backTop.ico" alt="Zum Seitenanfang">
+
+</a></span></footer>
+
+<!-- instagram.com/jumicontent -->
+<!--<a id="instagramIcon" href="https://www.instagram.com/jumicontent" target="_blank">
+<img src="../assets/img/ico/instagram.ico" alt="Instagram/jumicontent"></a></span>-->
+
+<!-- Export -Feature (inaktiv)-->
+<!-- https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js-->
+<!--<span class="flex siteFeatures">
+<a id="exportIcon"><img src="../assets/img/ico/exportPDF.ico" alt="Export as PDF"></a>&#32;
+<script src="assets/js/jspdf.umd.min.js">-->
+
+<!-- HTML-Analyzer Debugging ->
+<h1>HTML-Analyzer</h1>
+<div class="flex">
+<h3>Tags:</h3>
+<ul id="tagList"></ul>
+<h3>Classes:</h3>
+<ul id="classList"></ul>
+<h3>IDs:</h3>
+<ul id="idList"></ul>
+</div>
+<script src="assets/js/html-analyzer.js"></script>
+<!- HTML-Analyzer Debugging -->
+
+<!-- JavaScricpt -->
     <script src="../assets/js/menu.js"></script>
 	<script src="../assets/js/modal.js"></script>
     <!-- for Easteregg Project:
-    <script src="../assets/js/read.js"></script> -->
-
-    <!-- PDF-Export-Script (jsPDF):
-https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js
-<script src="../assets/js/jspdf.umd.min.js"> -->
+    <script src="assets/js/read.js"></script> -->
 
 </body>
 </html>
