--- a/Content.htm
+++ b/Content.htm
@@ -83,10 +83,10 @@ snippets,vorlagen,lernen,verstehen,
         <li><b><a href="https://www.jumi.biz/pages/IT-Sicherheit.htm">IT-Sicherheit </a></b></li>
         <li><b><a href="pages/###">###</a></b></li>
         <li><b><a href="pages/###">###</a></b></li>
-        <h3>### </h3>
-        <li><b><a href="pages/###">###</a></b></li>
-        <li><b><a href="pages/###">###</a></b></li>
-        <li><b><a href="pages/###">###</a></b></li>
+        <h3>Kritische Infrastrukturen </h3>
+        <li><b><a href="https://www.jumi.biz/pages/Kritische_Infrastrukturen.htm">BSI Kritis Gesetze </a></b></li>
+        <li><b><a href="https://www.jumi.biz/pages/Kritische_Infrastrukturen.htm">Standards und Anwendungen </a></b></li>
+        <li><b><a href="pages/###">Angriffspunkte </a></b></li>
         <h3>### </h3>
         <li><b><a href="pages/###">###</a></b></li>
         <li><b><a href="pages/###">###</a></b></li>
