--- a/pages/Kritische_Infrastrukturen.htm
+++ b/pages/Kritische_Infrastrukturen.htm
@@ -1,25 +1,27 @@
 <!DOCTYPE html><html lang="de"><head><meta charset="utf-8">
-
 <!-- Optimierung für Mobilgeräte -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
 <!-- HTTP-Header -->
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
 <!-- Metadaten -->
-<meta name="description" content="Kritische Infrastrukturen
-"><meta name="keywords" content="kritis,it,sicherheit
+<meta name="description" content="
+Sammlung von Themen über Informatik, kompakt.
+"><meta name="keywords" content="
+linux,windows,sicherheit,hacking,
+administration,code,shell,terminal,syntax,
+tool,programm,it,informatik,information,
+technologie,fachinformatik,computer,pc,
+system,netzwerk,integration,programmierung
+snippets,vorlagen,lernen,verstehen,
 "><meta name="author" content="Jumi">
-
 <!-- Favicon -->
 <link rel="icon" href="../assets/img/ico/jumi.ico">
 <title>jumi</title>
-
 <!-- Debuger (falls nötig)
         <meta http-equiv="refresh"y content="6">
         <style>* {border: 1px solid red;}</style>-->
 
-<!-- Layout -->
+<!-- Sheets -->
 <link rel="stylesheet" href="../assets/css/style.css">
 <link rel="stylesheet" href="../assets/css/menu.css">
 <link rel="stylesheet" href="../assets/css/main.css">
@@ -32,7 +34,7 @@
 <div class="header-content">
 
 <!-- LOGO -->
-<h1 class="jumi-logo"><a href="https://jumi.biz">jumi.biz</a>&#32;</h1>
+<h1 class="jumi-logo"><a href="https://www.jumi.biz">jumi.biz</a>&#32;</h1>
 
 <!-- MENU -->
 <nav class="menu">
@@ -44,21 +46,18 @@
 </button>
 
 <ul data-state="closed" class="primary-navigation" id="primary-navigation">
-<li><a href="https://jumi.biz/Content.htm"><i class="menu-icon">
-<img src="../assets/img/ico/menu-content.ico" alt="Content"></i>content</a></li>
-<li><a href="https://jumi.biz/pages/Links.htm"><i class="menu-icon">
-<img src="../assets/img/ico/menu-links.ico" alt="Links"></i>links</a></li>
-<li><a href="https://jumi.biz/pages/Cheats.htm"><i class="menu-icon">
-<img src="../assets/img/ico/menu-cheats.ico" alt="Cheats"></i>cheats</a></li>
-<li><a href="https://jumi.biz"><i class="menu-icon">
-<img src="../assets/img/ico/jumi.ico" alt="WTF is Jumi?"></i><span id="wtf-is-jumi">wtf is jumi?</span></a></li>
+<li><a href="https://www.jumi.biz/Content.htm"><i class="menu-icon">
+<img src="https://www.jumi.biz/assets/img/ico/menu-content.ico" alt="Content"></i>content</a></li>
+<li><a href="https://www.jumi.biz/Links.htm"><i class="menu-icon">
+<img src="https://www.jumi.biz/assets/img/ico/menu-links.ico" alt="Links"></i>links</a></li>
+<li><a href="https://www.jumi.biz/Cheats.htm"><i class="menu-icon">
+<img src="https://www.jumi.biz/assets/img/ico/menu-cheats.ico" alt="Cheats"></i>cheats</a></li>
+<li><a href="https://www.jumi.biz"><i class="menu-icon">
+<img src="https://www.jumi.biz/assets/img/ico/jumi.ico" alt="WTF is Jumi?"></i>
+<span id="wtf-is-jumi">wtf is jumi?</span></a></li>
+</ul></nav></div></header><main>
 
-</ul>
-</nav>
-</div>
-</header>
-<main>
-
+<!-- MAIN -->
 <div class="grid-container">
 <article class="content flow">
 
@@ -358,24 +357,50 @@
 </div>
 </main>
 
-<footer>
 <!-- IMPRESSUM -->
-<span class="flex profil-links"><a id="githubIcon" href="https://github.com/xuser123" target="_blank"><img src="../assets/img/ico/github.ico" alt="Github/xuser123"></a>&#32;<a  id="instagramIcon" href="https://instagram.com/jumicontent" target="_blank"><img src="../assets/img/ico/instagram.ico" alt="Instagram/jumicontent"></a></span>
+<footer><span class="flex profil-links">
+
+<!-- github.com/xuser123 -->
+<a id="githubIcon" href="https://www.github.com/xuser123" target="_blank">
+<img src="../assets/img/ico/github.ico" alt="Github/xuser123"></a>&#32;
+
 <!-- contact@jumi.biz -->
 <span class="jumi-email">contact&#64;jumi.biz</span>
-<!-- Site Features -->
-<span class="flex siteFeatures"><a id="exportIcon"><img src="../assets/img/ico/exportPDF.ico" alt="Export as PDF"></a>&#32;<a id="scrollToTop" href="#"><img src="../assets/img/ico/backTop.ico" alt="Back to Top"></a></span>
-</footer>
 
-<!-- Skripte -->
+<!-- Zum Seitenanfang -Feature (aktiv)-->
+<a id="scrollToTop" href="#">
+<img src="../assets/img/ico/backTop.ico" alt="Zum Seitenanfang">
+
+</a></span></footer>
+
+<!-- instagram.com/jumicontent -->
+<!--<a id="instagramIcon" href="https://www.instagram.com/jumicontent" target="_blank">
+<img src="../assets/img/ico/instagram.ico" alt="Instagram/jumicontent"></a></span>-->
+
+<!-- Export -Feature (inaktiv)-->
+<!-- https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js-->
+<!--<span class="flex siteFeatures">
+<a id="exportIcon"><img src="../assets/img/ico/exportPDF.ico" alt="Export as PDF"></a>&#32;
+<script src="assets/js/jspdf.umd.min.js">-->
+
+<!-- HTML-Analyzer Debugging ->
+<h1>HTML-Analyzer</h1>
+<div class="flex">
+<h3>Tags:</h3>
+<ul id="tagList"></ul>
+<h3>Classes:</h3>
+<ul id="classList"></ul>
+<h3>IDs:</h3>
+<ul id="idList"></ul>
+</div>
+<script src="assets/js/html-analyzer.js"></script>
+<!- HTML-Analyzer Debugging -->
+
+<!-- JavaScricpt -->
     <script src="../assets/js/menu.js"></script>
 	<script src="../assets/js/modal.js"></script>
     <!-- for Easteregg Project:
-    <script src="../assets/js/read.js"></script> -->
-
-    <!-- PDF-Export-Script (jsPDF):
-https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js
-<script src="../assets/js/jspdf.umd.min.js"> -->
+    <script src="assets/js/read.js"></script> -->
 
 </body>
 </html>
