--- a/pages/technische_Maßnahmen.htm
+++ b/pages/technische_Maßnahmen.htm
@@ -15,18 +15,18 @@ system,netzwerk,integration,programmierung
 snippets,vorlagen,lernen,verstehen,
 "><meta name="author" content="Jumi">
 <!-- Favicon -->
-<link rel="icon" href="https://www.jumi.biz/assets/img/ico/jumi.ico">
+<link rel="icon" href="../assets/img/ico/jumi.ico">
 <title>jumi</title>
 <!-- Debuger (falls nötig)
         <meta http-equiv="refresh"y content="6">
         <style>* {border: 1px solid red;}</style>-->
 
 <!-- Sheets -->
-<link rel="stylesheet" href="https://www.jumi.biz/assets/css/style.css">
-<link rel="stylesheet" href="https://www.jumi.biz/assets/css/menu.css">
-<link rel="stylesheet" href="https://www.jumi.biz/assets/css/main.css">
-<link rel="stylesheet" href="https://www.jumi.biz/assets/css/modal.css">
-<link rel="stylesheet" href="https://www.jumi.biz/assets/css/media-queries.css">
+<link rel="stylesheet" href="../assets/css/style.css">
+<link rel="stylesheet" href="../assets/css/menu.css">
+<link rel="stylesheet" href="../assets/css/main.css">
+<link rel="stylesheet" href="../assets/css/modal.css">
+<link rel="stylesheet" href="../assets/css/media-queries.css">
 
 </head>
 <body id=" ଘ(੭*ˊᵕˋ)੭* ̀ˋ hello ɪɴᴛᴇʀɴᴇᴛ ">
@@ -57,40 +57,42 @@ snippets,vorlagen,lernen,verstehen,
 <span id="wtf-is-jumi">wtf is jumi?</span></a></li>
 </ul></nav></div></header><main>
 
+<!-- MAIN -->
 <div class="grid-container">
 <article class="content flow">
-<h2 id="bigHL">Informationssicherheit </h2>
+
+<h2 id="bigHL">AAAAAAAAAA </h2>
   <div class="inside-content">
     <div class="in-inside">
       <ul>
-        <h3>Standards </h3>
-        <li><b><a href="https://www.jumi.biz/pages/ISO-27000.htm">ISO/IEC 27000 </a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/ISO-2700x.htm">ISO/IEC 2700x </a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/BSI-200-1.htm">BSI-Standard 200-1 </a></b></li>
-        <h3>IT-Grundschutz </h3>
-        <li><b><a href="https://www.jumi.biz/pages/Elementare_Gefährdungen.htm">Elementare Gefährdungen </a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/Prozess_Bausteine.htm">Prozess Bausteine </a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/System_Bausteine.htm">System Bausteine </a></b></li>
-        <h3>Datensicherheit </h3>
-        <li><b><a href="https://www.jumi.biz/pages/Datenschutz.htm">Datenschutz </a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/organisatorische_Maßnahmen.htm">organisatorische Maßnahmen </a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/technisch_Maßnahmen.htm">technisch Maßnahmen </a></b></li>
+        <h3>### </h3>
+######
+######
+######
+        <h3>### </h3>
+######
+######
+######
+        <h3>### </h3>
+######
+######
+######
       </ul>
     </div>
     <div class="in-inside">
       <ul>
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+######
+######
+######
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+######
+######
+######
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+######
+######
+######
       </ul>
     </div>
   </div>
@@ -101,33 +103,33 @@ snippets,vorlagen,lernen,verstehen,
     <div class="in-inside">
       <ul>
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+######
+######
+######
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+######
+######
+######
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+######
+######
+######
       </ul>
     </div>
     <div class="in-inside">
       <ul>
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+######
+######
+######
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+######
+######
+######
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+######
+######
+######
       </ul>
     </div>
   </div>
@@ -138,33 +140,33 @@ snippets,vorlagen,lernen,verstehen,
     <div class="in-inside">
       <ul>
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+######
+######
+######
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+######
+######
+######
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+######
+######
+######
       </ul>
     </div>
     <div class="in-inside">
       <ul>
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+######
+######
+######
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+######
+######
+######
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+######
+######
+######
       </ul>
     </div>
   </div>
@@ -175,33 +177,33 @@ snippets,vorlagen,lernen,verstehen,
     <div class="in-inside">
       <ul>
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+######
+######
+######
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+######
+######
+######
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+######
+######
+######
       </ul>
     </div>
     <div class="in-inside">
       <ul>
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+######
+######
+######
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+######
+######
+######
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+######
+######
+######
       </ul>
     </div>
   </div>
@@ -212,74 +214,85 @@ snippets,vorlagen,lernen,verstehen,
     <div class="in-inside">
       <ul>
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+######
+######
+######
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+######
+######
+######
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+######
+######
+######
       </ul>
     </div>
     <div class="in-inside">
       <ul>
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+######
+######
+######
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+######
+######
+######
         <h3>### </h3>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/###">###</a></b></li>
+######
+######
+######
       </ul>
     </div>
   </div>
-</article></div></main>
+
+</article>
+</div>
+</main>
+
 <!-- IMPRESSUM -->
 <footer><span class="flex profil-links">
+
 <!-- github.com/xuser123 -->
-<a id="githubIcon" href="https://github.com/xuser123" target="_blank">
-<img src="https://www.jumi.biz/assets/img/ico/github.ico" alt="Github/xuser123">
-</a>&#32;
-<!-- instagram.com/jumicontent -->
-<a id="instagramIcon" href="https://instagram.com/jumicontent" target="_blank">
-<img src="https://www.jumi.biz/assets/img/ico/instagram.ico" alt="Instagram/jumicontent">
-</a></span>
+<a id="githubIcon" href="https://www.github.com/xuser123" target="_blank">
+<img src="../assets/img/ico/github.ico" alt="Github/xuser123"></a>&#32;
 
 <!-- contact@jumi.biz -->
-<span class="jumi-email">
-contact&#64;jumi.biz
-</span>
-
-<span class="flex siteFeatures">
-<!-- Export -Feature (inaktiv)-->
-<a id="exportIcon">
-<img src="https://www.jumi.biz/assets/img/ico/exportPDF.ico" alt="Export as PDF">
-<!-- PDF-Export-Script (jsPDF):
-https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js
-<script src="https://www.jumi.biz/assets/js/jspdf.umd.min.js"> -->
-</a>&#32;
+<span class="jumi-email">contact&#64;jumi.biz</span>
 
 <!-- Zum Seitenanfang -Feature (aktiv)-->
 <a id="scrollToTop" href="#">
-<img src="https://www.jumi.biz/assets/img/ico/backTop.ico" alt="Zum Seitenanfang">
+<img src="../assets/img/ico/backTop.ico" alt="Zum Seitenanfang">
+
 </a></span></footer>
 
-    <!-- JavaScript -->
-    <script src="https://www.jumi.biz/assets/js/menu.js"></script>
-	<script src="https://www.jumi.biz/assets/js/modal.js"></script>
+<!-- instagram.com/jumicontent -->
+<!--<a id="instagramIcon" href="https://www.instagram.com/jumicontent" target="_blank">
+<img src="../assets/img/ico/instagram.ico" alt="Instagram/jumicontent"></a></span>-->
 
+<!-- Export -Feature (inaktiv)-->
+<!-- https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js-->
+<!--<span class="flex siteFeatures">
+<a id="exportIcon"><img src="../assets/img/ico/exportPDF.ico" alt="Export as PDF"></a>&#32;
+<script src="assets/js/jspdf.umd.min.js">-->
+
+<!-- HTML-Analyzer Debugging ->
+<h1>HTML-Analyzer</h1>
+<div class="flex">
+<h3>Tags:</h3>
+<ul id="tagList"></ul>
+<h3>Classes:</h3>
+<ul id="classList"></ul>
+<h3>IDs:</h3>
+<ul id="idList"></ul>
+</div>
+<script src="assets/js/html-analyzer.js"></script>
+<!- HTML-Analyzer Debugging -->
+
+<!-- JavaScricpt -->
+    <script src="../assets/js/menu.js"></script>
+	<script src="../assets/js/modal.js"></script>
     <!-- for Easteregg Project:
-    <script src="https://www.jumi.biz/assets/js/read.js"></script> -->
-
+    <script src="assets/js/read.js"></script> -->
 
 </body>
 </html>
