--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@ snippets,vorlagen,lernen,verstehen,
 Themen:</a></h3>
 <ul>
 <li>Fachinformatik</li>
-<li>Sicherheit</li>
+<li>IT-Sicherheit</li>
 <li>Netzwerke</li>
-<li>Programmierung</li>
 <li>Projektmanagement</li>
+<li>Pentesting</li>
 <li></li>
 </ul>
 </div>
