--- a/index.html
+++ b/index.html
@@ -176,24 +176,21 @@ alt="Picture shows computer">
 <a id="githubIcon" href="https://www.github.com/xuser123" target="_blank">
 <img src="assets/img/ico/github.ico" alt="Github/xuser123"></a>&#32;
 
+<!-- instagram.com/jumicontent -->
+<a id="instagramIcon" href="https://www.instagram.com/jumicontent" target="_blank">
+<img src="assets/img/ico/instagram.ico" alt="Instagram/jumicontent"></a></span>
+
 <!-- contact@jumi.biz -->
 <span class="jumi-email">contact&#64;jumi.biz</span>
 
+<span class="flex siteFeatures">
+<a id="exportIcon"><img src="assets/img/ico/exportPDF.ico" alt="Export as PDF"></a>&#32;
+
 <!-- Zum Seitenanfang -Feature (aktiv)-->
 <a id="scrollToTop" href="#">
-<img src="assets/img/ico/backTop.ico" alt="Zum Seitenanfang">
+<img src="assets/img/ico/backTop.ico" alt="Zum Seitenanfang"></a>
 
-</a></span></footer>
-
-<!-- instagram.com/jumicontent -->
-<!--<a id="instagramIcon" href="https://www.instagram.com/jumicontent" target="_blank">
-<img src="assets/img/ico/instagram.ico" alt="Instagram/jumicontent"></a></span>-->
-
-<!-- Export -Feature (inaktiv)-->
-<!-- https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js-->
-<!--<span class="flex siteFeatures">
-<a id="exportIcon"><img src="assets/img/ico/exportPDF.ico" alt="Export as PDF"></a>&#32;
-<script src="assets/js/jspdf.umd.min.js">-->
+</span></footer>
 
 <!-- HTML-Analyzer Debugging ->
 <h1>HTML-Analyzer</h1>
@@ -210,9 +207,11 @@ alt="Picture shows computer">
 
 <!-- JavaScricpt -->
     <script src="assets/js/menu.js"></script>
-	<script src="assets/js/modal.js"></script>
-    <!-- for Easteregg Project:
-    <script src="assets/js/read.js"></script> -->
+    <script src="assets/js/modal.js"></script>
+<!--<script src="assets/js/jspdf.umd.min.js"></script>-->
+<!-- https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js-->
+<!-- for Easteregg Project:-->
+<!--><script src="assets/js/read.js"></script>-->
 
 </body>
 </html>
