--- a/Links.htm
+++ b/Links.htm
@@ -139,7 +139,7 @@ snippets,vorlagen,lernen,verstehen,
 <span class="flex siteFeatures">
 <a id="exportIcon"><img src="assets/img/ico/exportPDF.ico" alt="Export as PDF"></a>&#32;
 
-<!-- Zum Seitenanfang -Feature (aktiv)-->
+<!-- Zum Seitenanfang -->
 <a id="scrollToTop" href="#">
 <img src="assets/img/ico/backTop.ico" alt="Zum Seitenanfang"></a>
 
