--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@ alt="Picture shows computer">
 
 <!-- Shownotes -->
 <h3 id="bigHL">Shownotes</h3>
-	<ul><li>Kommasetzung mit KI: <a href="https://komma.ai/#" target="_blank">komma.ai</a></li>
-	<li>Suchmaschine mit KI: <a href="https://you.com" target="_blank">you.com</a></li>
+	<ul><li>Kommasetzungs-KI: <a href="https://komma.ai/#" target="_blank">komma.ai</a></li>
+	<li>Suchmaschinen-KI: <a href="https://you.com" target="_blank">you.com</a></li>
 	<li>HTML-Checker: <a href="https://validator.w3.org/" target="_blank">validator.w3.org</a></li>
 	<li>CSS-Checker: <a href="https://jigsaw.w3.org/css-validator/" target="_blank">jigsaw.w3.org/css-validator</a></li></ul>
 
