--- a/pages/Schutzziele.htm
+++ b/pages/Schutzziele.htm
@@ -61,14 +61,19 @@ snippets,vorlagen,lernen,verstehen,
 <div class="grid-container">
 <article class="content flow">
 
-<h2 id="bigHL">AAAAAAAAAA </h2>
+<h2 id="bigHL">Informationssicherheit </h2>
   <div class="inside-content">
     <div class="in-inside">
       <ul>
-        <h3>### </h3>
-######
-######
-######
+        <h3>Schutzziele der Informationssicherheit </h3>
+
+        <ol><li><b>Vertraulichkeit</b> Nur autorisierte Zugriffe</li>
+        <li><b>Integrität</b> Schutz vor Manipulation</li>
+        <li><b>Verfügbarkeit</b> Ausfallsicherheit</li>
+        <li><b>Authentizität</b> Verifizierte Quellen</li>
+        <li><b>Zurechenbarkeit</b> Nachverfolgbarkeit von Aktivitäten</li>
+        <li><b>Unbestreitbarkeit</b> Sicherstellung durchgeführter Handlungen </li></ol>
+<!--
         <h3>### </h3>
 ######
 ######
@@ -93,6 +98,7 @@ snippets,vorlagen,lernen,verstehen,
 ######
 ######
 ######
+-->
       </ul>
     </div>
   </div>
