--- a/Content.htm
+++ b/Content.htm
@@ -64,7 +64,7 @@ snippets,vorlagen,lernen,verstehen,
     <div class="in-inside">
       <ul>
         <h3>Standards </h3>
-        <li><b><a href="https://www.jumi.biz/pages/ISO-27000.htm">Ziele und Sicherheiten </a></b></li>
+        <li><b><a href="https://www.jumi.biz/pages/Schutzziele.htm">Ziele und Sicherheiten </a></b></li>
         <li><b><a href="https://www.jumi.biz/pages/ISO-2700x.htm">ISO/IEC 2700x-Familie </a></b></li>
         <li><b><a href="https://www.jumi.biz/pages/BSI-200-1.htm">BSI-Standard 200-1 </a></b></li>
         <h3>IT-Grundschutz </h3>
