Anordnung und Texte bearbeitet

--- a/Content.htm
+++ b/Content.htm
@@ -79,7 +79,7 @@ snippets,vorlagen,lernen,verstehen,
     </div>
     <div class="in-inside">
       <ul>
-        <h3>BSI Kritis Gesetze </h3>
+        <h3>BSI-Kritis-Gesetze </h3>
         <li><b><a href="https://www.jumi.biz/pages/Kritische_Infrastrukturen.htm">Kritische Infrastrukturen </a></b></li>
         <li><b><a href="https://www.jumi.biz/pages/Kritische_Infrastrukturen.htm">Standards und Anwendungen </a></b></li>
         <li><b><a href="https://www.jumi.biz/pages/Kritische_Infrastrukturen.htm">Angriffspunkte </a></b></li>
