--- a/pages/IT-Sicherheit.htm
+++ b/pages/IT-Sicherheit.htm
@@ -130,7 +130,8 @@ snippets,vorlagen,lernen,verstehen,
 <ul><li>für unbedingt notwendige Verarbeitungszwecke</li></ul></li>
 <li>Schutz vor übermäßiger Speicherung </li></ul></li></ul>
 
-<h3><a name="Rechtliche-und-ethische-Verantwortung-von-Organisationen-und-Einzelpersonen--c3--bc-ber-das-angemessene"></a><b>Rechtliche und ethische Verantwortung von Organisationen und Einzelpersonen über das angemessene</b> </h3>
+<h3><a name="Rechtliche-und-ethische-Verantwortung-von-Organisationen-und-Einzelpersonen--c3--bc-ber-das-angemessene"></a><b>Rechtliche und ethische Verantwortung</b> </h3>
+<p>...von Organisationen und Einzelpersonen über das angemessene</p>
 <ul><li>sammeln,</li>
 <li>verarbeiten,</li>
 <li>speichern,</li>
@@ -152,8 +153,9 @@ snippets,vorlagen,lernen,verstehen,
 <ul><li>inter. Norm für ISMS</li>
 <li>erfüllt Anforderung für Zertifizierungsmöglichkeit</li></ul></li>
 <li>ISO 27002 (Code of practice for information security controls)
-<ul><li>unterstützt bei Auswahl und Umsetzung von ISO/IEC 27001 Maßnahmen</li>
-<li>Sicherheitsmanagement aufbauen und verankern</li></ul></li>
+<ul><li>unterstützt bei Auswahl und Umsetzung
+</li><ul><li>von ISO/IEC 27001 Maßnahmen
+</li></ul><li>Sicherheitsmanagement aufbauen und verankern</li></ul></li>
 <li>BSI IT-Grundschutz</li>
 <li>BSI-Standard 200-1
 <ul><li>allgemeine Anforderungen an ISMS</li></ul></li>
