--- a/Content.htm
+++ b/Content.htm
@@ -96,7 +96,7 @@ snippets,vorlagen,lernen,verstehen,
   </div>
 </article>
 <article class="content flow">
-<h2 id="bigHL">EEEEEEEE </h2>
+<h2 id="bigHL">IT-Systeme </h2>
   <div class="inside-content">
     <div class="in-inside">
       <ul>
