--- a/index.html
+++ b/index.html
@@ -81,12 +81,11 @@ snippets,vorlagen,lernen,verstehen,
 <h3><a href="https://www.jumi.biz/Content.htm">
 Themen:</a></h3>
 <ul>
-<li>Fachinformatik</li>
-<li>IT-Sicherheit</li>
-<li>Netzwerke</li>
-<li>Projektmanagement</li>
-<li>Pentesting</li>
-<li></li>
+<li>IT-Sicherheit </li>
+<li>IT-Systeme </li>
+<li>Pentesting </li>
+<li>Projektmanagement </li>
+<li>Fachinformatik </li>
 </ul>
 </div>
 <div class="in-inside">
