--- a/pages/Schutzziele.htm
+++ b/pages/Schutzziele.htm
@@ -64,16 +64,22 @@ snippets,vorlagen,lernen,verstehen,
 <h2 id="bigHL">Informationssicherheit </h2>
   <div class="inside-content">
     <div class="in-inside">
-      <ul>
-        <h3>Schutzziele der Informationssicherheit </h3>
 
-        <ol><li><b>Vertraulichkeit</b> Nur autorisierte Zugriffe</li>
-        <li><b>Integrität</b> Schutz vor Manipulation</li>
-        <li><b>Verfügbarkeit</b> Ausfallsicherheit</li>
-        <li><b>Authentizität</b> Verifizierte Quellen</li>
-        <li><b>Zurechenbarkeit</b> Nachverfolgbarkeit von Aktivitäten</li>
-        <li><b>Unbestreitbarkeit</b> Sicherstellung durchgeführter Handlungen </li></ol>
-<!--
+        <dl><h3>Schutzziele der Informationssicherheit
+        </h3><dt><b>Vertraulichkeit
+        </b></dt><dd>Nur autorisierte Zugriffe
+        </dd><dt><b>Integrität
+        </b></dt><dd>Schutz vor Manipulation
+        </dd><dt><b>Verfügbarkeit
+        </b><dt><dd>Ausfallsicherheit
+        </dd><dt><b>Authentizität
+        </b></dt><dd>Verifizierte Quellen
+        </dd><dt><b>Zurechenbarkeit
+        </b></dt><dd>Nachverfolgbarkeit von Aktivitäten
+        </dd><dt><b>Unbestreitbarkeit
+        </b></dt><dd>Sicherstellung durchgeführter Handlungen
+        </dd></dl>
+
         <h3>### </h3>
 ######
 ######
