--- a/pages/Schutzziele.htm
+++ b/pages/Schutzziele.htm
@@ -64,8 +64,7 @@ snippets,vorlagen,lernen,verstehen,
 <h2 id="bigHL">Informationssicherheit </h2>
   <div class="inside-content">
     <div class="in-inside">
-
-        <dl><h3>Schutzziele der Informationssicherheit
+        <dl><h3>Schutzziele
         </h3><dt><b>Vertraulichkeit
         </b></dt><dd>Nur autorisierte Zugriffe
         </dd><dt><b>Integrität
@@ -79,16 +78,6 @@ snippets,vorlagen,lernen,verstehen,
         </dd><dt><b>Unbestreitbarkeit
         </b></dt><dd>Sicherstellung durchgeführter Handlungen
         </dd></dl>
-
-        <h3>### </h3>
-######
-######
-######
-        <h3>### </h3>
-######
-######
-######
-      </ul>
     </div>
     <div class="in-inside">
       <ul>
